--- a/TaxiStationConsole/TaxiStationConsole.csproj
+++ b/TaxiStationConsole/TaxiStationConsole.csproj
@@ -43,11 +43,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Entities\TaxiStation.cs" />
+    <Compile Include="Enums\Country.cs" />
+    <Compile Include="Models\HachBackCar.cs" />
+    <Compile Include="Models\ITaxiCar.cs" />
+    <Compile Include="Models\MiniVanCar.cs" />
+    <Compile Include="Models\SedanCar.cs" />
+    <Compile Include="Models\TaxiCar.cs" />
+    <Compile Include="Services\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Starter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
+    <Analyzer Include="packages\StyleCop.Analyzers.1.1.118\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
